--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,6 @@ jobs:
       with:
         path: ./src/neilpa.me/go-jfif
     - name: Build
-      #run: go build -v ./...
-      run: go build -v .
+      run: go build -v ./...
     - name: Test
-      #run: go test ./...
-      run: go test .
+      run: go test ./...
